--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "dependencies": {
         "express": "^4.17.1",
         "socket.io": "^2.3.0"
+    },
+    "engines": {
+        "node": "14.x"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     }
 }
